# ros2_gen_ws_and_pkg

./: create_ws.sh
edit_cpp_package_name/: CMakeLists.txt  package.xml
edit_cpp_package_name/launch/: test.launch.py
edit_cpp_package_name/src/: edit_node_name.cpp
edit_cpp_py_package_name/: CMakeLists.txt  Note.txt  package.xml
edit_cpp_py_package_name/launch/: test.launch.py
edit_cpp_py_package_name/src/: cpp_node.cpp
edit_py_pkg_name/: package.xml  setup.cfg  setup.py
edit_py_pkg_name/launch/: test.launch.py
